# scipp2

./: README.md  setup.cfg  tox.ini
requirements/: base.txt  ci.txt  docs.in  docs.txt  static.txt
src/scipp2/: __init__.py  data_array.py  data_group.py
src/scipp2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: data_array_test.py  data_group_test.py
