[metadata]
name = scipp2
author = Scipp contributors (https://github.com/scipp)
description = Prototype for new Scipp data structures
license = BSD
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://scipp.github.io/scippnexus
project_urls =
    Bug Tracker = https://github.com/scipp/scippnexus/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    scipp>=22.11
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
scipp2 = py.typed

[flake8]
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
extend-ignore = E203

[yapf]
based_on_style = pep8
column_limit = 88
